--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.trajano</groupId>
 	<artifactId>trajano</artifactId>
-	<version>1</version>
+	<version>2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Trajano</name>
 	<url>http://trajano.github.com/trajano/</url>
@@ -43,7 +43,7 @@
 		<connection>scm:git:https://github.com/trajano/${project.artifactId}</connection>
 		<developerConnection>scm:git:ssh://git@github.com/trajano/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/trajano/${project.artifactId}</url>
-		<tag>trajano-1</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<prerequisites>
 		<maven>3.0.0</maven>
