--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.trajano</groupId>
 	<artifactId>trajano</artifactId>
@@ -17,7 +18,7 @@
 	<licenses>
 		<license>
 			<name>Eclipse Public License 1.0</name>
-			<url>https://bugs.eclipse.org/bugs/attachment.cgi?id=206796</url>
+			<url>LICENSE</url>
 			<comments>http://www.opensource.org/licenses/EPL-1.0</comments>
 		</license>
 	</licenses>
@@ -45,53 +46,30 @@
 		<url>https://github.com/trajano/${project.artifactId}</url>
 		<tag>HEAD</tag>
 	</scm>
+	<distributionManagement>
+		<repository>
+			<id>trajano-sourceforge</id>
+			<name>FRS Area</name>
+			<url>sftp://web.sourceforge.net/home/frs/project/t/tt/ttl/m2-repo</url>
+		</repository>
+		<snapshotRepository>
+			<id>trajano-sourceforge-snapshot</id>
+			<name>FRS Area Snapshot</name>
+			<uniqueVersion>true</uniqueVersion>
+			<url>sftp://web.sourceforge.net/home/frs/project/t/tt/ttl/m2-snapshot</url>
+		</snapshotRepository>
+		<site>
+			<id>github-site</id>
+			<name>github Site</name>
+			<url>gitsite:git@github.com/trajano/${project.artifactId}.git</url>
+		</site>
+	</distributionManagement>
 	<prerequisites>
 		<maven>3.0.0</maven>
 	</prerequisites>
 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-release-plugin</artifactId>
-				<inherited>false</inherited>
-				<configuration>
-					<goals>site ghSite:site</goals>
-				</configuration>
-			</plugin>
-		</plugins>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>3.1</version>
-					<executions>
-						<execution>
-							<id>attach-descriptor</id>
-							<goals>
-								<goal>attach-descriptor</goal>
-							</goals>
-						</execution>
-					</executions>
-					<configuration>
-						<reportPlugins>
-							<plugin>
-								<artifactId>maven-project-info-reports-plugin</artifactId>
-								<version>2.4</version>
-								<configuration>
-									<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-									<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-								</configuration>
-							</plugin>
-							<plugin>
-								<artifactId>maven-surefire-report-plugin</artifactId>
-								<version>2.9</version>
-							</plugin>
-							<plugin>
-								<groupId>org.codehaus.mojo</groupId>
-								<artifactId>versions-maven-plugin</artifactId>
-							</plugin>
-						</reportPlugins>
-					</configuration>
-				</plugin>
 				<plugin>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>1.7</version>
@@ -121,19 +99,65 @@
 					<version>2.3.2</version>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>versions-maven-plugin</artifactId>
-					<version>1.3.1</version>
-				</plugin>
-				<plugin>
-					<groupId>com.github.github</groupId>
-					<artifactId>site-maven-plugin</artifactId>
-					<version>0.7</version>
-					<configuration>
-						<message>Creating site for ${project.version}</message>
-					</configuration>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.2</version>
+			</extension>
+			<extension>
+				<groupId>com.github.stephenc.wagon</groupId>
+				<artifactId>wagon-gitsite</artifactId>
+				<version>0.4.1</version>
+			</extension>
+		</extensions>
 	</build>
+	<reporting>
+		<plugins>
+			<plugin>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>
+					<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>index</report>
+							<report>summary</report>
+							<report>project-team</report>
+							<report>dependencies</report>
+							<report>dependency-convergence</report>
+							<report>dependency-management</report>
+							<report>plugins</report>
+							<report>plugin-management</report>
+							<report>distribution-management</report>
+							<report>issue-tracking</report>
+							<report>license</report>
+							<report>scm</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>1.3.1</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>dependency-updates-report</report>
+							<report>plugin-updates-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
