--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,16 @@
 							<artifactId>wagon-ftp</artifactId>
 							<version>2.5</version>
 						</dependency>
+						<dependency>
+							<groupId>lt.velykis.maven.skins</groupId>
+							<artifactId>reflow-velocity-tools</artifactId>
+							<version>1.0.0</version>
+						</dependency>
+						<dependency>
+							<groupId>org.apache.velocity</groupId>
+							<artifactId>velocity</artifactId>
+							<version>1.7</version>
+						</dependency>
 					</dependencies>
 				</plugin>
 				<plugin>
