--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>net.trajano</groupId>
 	<artifactId>trajano</artifactId>
-	<version>5</version>
+	<version>6-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Trajano</name>
 	<url>http://site.trajano.net/</url>
@@ -51,7 +51,7 @@
 		<connection>scm:git:https://github.com/trajano/${project.artifactId}</connection>
 		<developerConnection>scm:git:ssh://git@github.com/trajano/${project.artifactId}.git</developerConnection>
 		<url>https://github.com/trajano/${project.artifactId}</url>
-		<tag>trajano-5</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<distributionManagement>
 		<site>
