Corrected issueManagement details
Based on https://maven.apache.org/plugins/maven-changes-plugin/usage.html

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	</licenses>
 	<inceptionYear>2012</inceptionYear>
 	<issueManagement>
-		<system>github</system>
+		<system>GitHub</system>
 		<url>https://github.com/trajano/${project.artifactId}/issues</url>
 	</issueManagement>
 	<developers>
