--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,9 @@
                             <version>1.7</version>
                         </dependency>
                     </dependencies>
+                    <configuration>
+                        <relativizeDecorationLinks>false</relativizeDecorationLinks>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
