--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,14 @@
     <licenses>
         <license>
             <name>Eclipse Public License 1.0</name>
-            <url>LICENSE</url>
-            <comments>http://www.opensource.org/licenses/EPL-1.0</comments>
+            <url>http://www.eclipse.org/legal/epl-v10.html</url>
         </license>
     </licenses>
     <developers>
         <developer>
             <id>trajano</id>
             <name>Archimedes Trajano</name>
-            <organization />
+            <organization/>
             <organizationUrl>http://www.trajano.net/</organizationUrl>
             <url>http://www.trajano.net/</url>
             <roles>
@@ -108,11 +107,6 @@
                     <version>3.3</version>
                     <dependencies>
                         <dependency>
-                            <groupId>lt.velykis.maven.skins</groupId>
-                            <artifactId>reflow-velocity-tools</artifactId>
-                            <version>1.1.0</version>
-                        </dependency>
-                        <dependency>
                             <groupId>net.trajano.wagon</groupId>
                             <artifactId>wagon-git</artifactId>
                             <version>1.0.0</version>
@@ -154,7 +148,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore />
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
