--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>net.trajano</groupId>
     <artifactId>trajano</artifactId>
-    <version>8</version>
+    <version>9-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Trajano</name>
     <description>
@@ -30,7 +30,7 @@
         <developer>
             <id>trajano</id>
             <name>Archimedes Trajano</name>
-            <organization/>
+            <organization />
             <organizationUrl>http://www.trajano.net/</organizationUrl>
             <url>http://www.trajano.net/</url>
             <roles>
@@ -45,7 +45,7 @@
     <scm>
         <connection>scm:git:https://github.com/trajano/${project.artifactId}</connection>
         <developerConnection>scm:git:ssh://git@github.com/trajano/${project.artifactId}.git</developerConnection>
-        <tag>trajano-8</tag>
+        <tag>HEAD</tag>
         <url>https://github.com/trajano/${project.artifactId}</url>
     </scm>
     <issueManagement>
@@ -153,7 +153,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore/>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
