--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
                     <artifactId>maven-release-plugin</artifactId>
                     <version>2.5.1</version>
                     <configuration>
-                        <goals>deploy site-deploy</goals>
+                        <goals>deploy site-deploy nexus-staging:release</goals>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                         <releaseProfiles>sonatype-release-profile</releaseProfiles>
                     </configuration>
