--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,21 @@
                     <version>1.0.4</version>
                 </plugin>
                 <plugin>
+                    <groupId>net.trajano.mojo</groupId>
+                    <artifactId>m2e-codestyle-maven-plugin</artifactId>
+                    <version>1.1.0</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>net.trajano</groupId>
+                            <artifactId>coding-standards</artifactId>
+                            <version>${coding.standards.version}</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <codeStyleBaseUrl>codestyle</codeStyleBaseUrl>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
                     <version>3.0.1</version>
