Correctly set up caching for Travis
added sonar cache
added maven cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: java
 jdk: oraclejdk8
 sudo: false
 cache:
-- maven
+  directories:
+  - $HOME/.m2
+  - $HOME/.sonar/cache
 addons:
   sonarqube: true
 env:
